Switch to Java 17
This uses the JVM toolchain feature to auto-provision a Java 17 JDK if
not already installed. This also removes the preview feature flags,
since records are a full feature in Java 17.